dnl Process this file with autoconf to produce a configure script.

AC_INIT([pocowebsocket], [1.0])
AM_INIT_AUTOMAKE([subdir-objects])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])

dnl CPPFLAGS="$CPPFLAGS -I/usr/local/include"
dnl 
dnl AC_MSG_CHECKING(for Poco)
dnl     AC_TRY_COMPILE([
dnl         #include <stdio.h>
dnl         /* #include <Poco/Net/HTTPServer.h> */
dnl         ],,
dnl         have_poco=yes, have_poco=no)
dnl     if test "$have_poco" = yes; then
dnl         AC_MSG_RESULT(yes)
dnl         AC_DEFINE(HAS_POCO, 1, [Define to 1 if Poco available])
dnl     else
dnl         AC_MSG_RESULT(no)
dnl             echo
dnl             echo "ERROR: Poco development libraries missing, please install."
dnl             echo "CPPFLAGS: $CPPFLAGS"
dnl             echo
dnl             exit 1
dnl     fi

AC_OUTPUT


